[package]
name = "sitelink-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
psl = "2.1.24"
reqwest = { version = "0.11.24", features = [ "socks" ] }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
spdlog-rs = "0.3.13"
tokio = { version = "1.36.0", features = ["full"] }
